positional_derive/tests/ui/unit-struct.rs
use positional_derive::ToPositionalRow;

#[derive(ToPositionalRow)]
struct MyData;

fn main() {}
